--- a/wx_tax/src/assets/css/index.css
+++ b/wx_tax/src/assets/css/index.css
@@ -42,6 +42,26 @@ body {
   text-align: center;
 }
 
+.pull-right{
+  float:right;
+}.pull-left{
+  float:left;
+}
+
+/* 底部固定按钮区域 */
+.bottom-btn-area {
+  box-sizing: border-box;
+  width: 100%;
+  height: 5rem;
+  border-top: 1px solid #ddd;
+  box-shadow: -1px 1px 4px 2px rgba(5, 5, 5, 0.1);
+  padding: 0 5%;
+  position: fixed;
+  bottom: 0;
+  vertical-align: middle;
+  margin: 0;
+}
+
 .mgt5 {
   margin-top: 0.5rem;
 }
@@ -110,8 +130,8 @@ body {
 
 .time-icon {
   margin: 0 0.3rem 0 0;
-  width: 1.2rem;
-  height: 1.2rem;
+  width: 1.1rem;
+  height: 1.1rem;
 }
 
 .time-icon+span {
@@ -124,7 +144,8 @@ body {
 .ask-time {
   font-size: 1.2rem;
 }
+
 /* 一般用于P标签默认margin过大 */
-.small-margin{
-  margin:0.5rem 0;
+.small-margin {
+  margin: 0.5rem 0;
 }
